Changed SQL Scripts Artifact Name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,5 +74,5 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Artifact: SQL Scripts'
       inputs:
-        artifactName: IdentitySQL
+        artifactName: SQLScripts
         targetPath: $(Build.SourcesDirectory)/SQL
