--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
       inputs:
         command: custom
         custom: 'ef '
-        arguments: migrations script --output $(Build.SourcesDirectory)/SQL/identity.sql --idempotent --project $(Build.SourcesDirectory)/src/Server/SimplySocial.Server.csproj --context IdentityContext
+        arguments: migrations script --output $(Build.ArtifactStagingDirectory)/SQL/identity.sql --idempotent --project $(Build.SourcesDirectory)/src/Server/SimplySocial.Server.csproj --context IdentityContext
     - task: DotNetCoreCLI@2
       displayName: Publish
       inputs:
@@ -51,18 +51,18 @@ stages:
         zipAfterPublish: true
         publishWebProjects: true
         projects: '$(BuildProject)'
-        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/SimplySocialApp'
     - task: PublishPipelineArtifact@1
       displayName: 'Publish Artifact'
       condition: succeededOrFailed()
       inputs:
         artifactName: SimplySocialApp
-        targetPath: '$(Build.ArtifactStagingDirectory)'
+        targetPath: '$(Build.ArtifactStagingDirectory)/SimplySocialApp'
     - task: PublishPipelineArtifact@1
-      displayName: 'Publish Artifact: SQL Scripts'
+      displayName: 'Publish SQL Scripts'
       inputs:
         artifactName: SQLScripts
-        targetPath: $(Build.SourcesDirectory)/SQL
+        targetPath: '$(Build.ArtifactStagingDirectory)/SQL'
 
 - stage: Deploy
   displayName: Deploy
@@ -91,11 +91,11 @@ stages:
       displayName: 'Deploy Database'
       steps:
         - task: DownloadPipelineArtifact@2
-          displayName: 'Download Artifact: SQL Scripts'
+          displayName: 'Download SQL Scripts'
           inputs:
             artifactName: SQLScripts
             path: $(Pipeline.Workspace)/SQL
-            itemPattern: '**/*.sql'
+            itemPattern: '*.sql'
         
         - task: SqlDacpacDeploymentOnMachineGroup@0
           inputs:
