--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  SQLScriptName: DbMigrate.script
+  SQLScriptName: DbMigrate.sql
 
 stages:
 - stage: Build
