Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ stages:
           arguments: install --global dotnet-ef
 
   - job: Build
+    dependsOn: PreBuild
     steps:
     # - task: UseDotNet@2
     #   displayName: 'Use .Net 5 SDK'
