--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ stages:
   displayName: 'Build App'
 
   variables:
-    BuildConfiguration: 'Release'
+    BuildConfiguration: Release
     NUGET_PACKAGES: $(Pipeline.Workspace)/.nuget/packages
     SQLArtifactDir: $(Build.ArtifactStagingDirectory)/SQL
     BuildProject: '$(Build.SourcesDirectory)/src/Server/SimplySocial.Server.csproj'
@@ -49,7 +49,7 @@ stages:
       displayName: Build
       inputs:
         projects: $(BuildProject)
-        arguments: --configuration $(BuildConfiguration)
+        arguments: --configuration $(BuildConfiguration) --no-restore
 
   - job: Prepare_App
     dependsOn: Build
@@ -60,7 +60,8 @@ stages:
         inputs:
           command: publish
           zipAfterPublish: true
-          publishWebProjects: true
+          #if publishWebProjects is true, the projects input is skipped.
+          publishWebProjects: false
           projects: '$(BuildProject)'
           arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/SimplySocialApp'
 
