Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,7 +110,7 @@ stages:
           inputs:
             appName: sealsdev
             appType: webAppLinux
-            azureSubscription: 'Free Azure Subscription (c7fc2dfb-f735-47e8-8b65-66057b28a6de)'
+            azureSubscription: $(AzureSubscription)
             package: '$(Pipeline.Workspace)/SimplySocialApp/Server.zip'
         
 
