--- a/src/Server.Core/SimplySocial.Server.Core.csproj
+++ b/src/Server.Core/SimplySocial.Server.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Server.Data\SimplySocial.Server.Data.csproj" />
   </ItemGroup>
 
