Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
           displayName: 'Deploy to App Service'
           inputs:
             appName: SimplySocial
-            appType: webAppLinux
+            appType: webApp
             azureSubscription: $(AzureSubscription)
             package: '$(Pipeline.Workspace)/SimplySocialApp/*.zip'
         
